<resources>
    <string name="app_name">Petsfromshelter</string>
    <string name="registration_title">Реєстрація</string>
    <string name="registration_name">Ім`я</string>
    <string name="registration_phone">Телефон</string>
    <string name="registration_email">Пошта</string>
    <string name="registration_password">Пароль</string>
    <string name="registration_address">Адреса</string>
    <string name="registration_city">Місто</string>
    <string name="registration_shelterName">Назва</string>
    <string name="registration_button"><u>Зареєструватися</u></string>
    <string name="registration_surname">Прізвище</string>
    <string name="registration_admin">Адмiн</string>
    <string name="changeProfile">Змінити профіль</string>
    <string name="change">Змінити</string>
    <string name="sex">Стать</string>
    <string name="type">Тип</string>
    <string name="weight">Вага</string>
    <string name="description">Опис</string>
    <string name="book">Забронювати</string>
    <string name="animalIsBooked">Тварина заброньована</string>
    <string name="date">Дата</string>
    <string name="ChooseDate">Оберіть час</string>
    <string name="accept">Підтвердити</string>
    <string name="filter">Фільтрувати:</string>
    <string name="sorting">Сортувати:</string>
    <string name="sterilized">Стерилізована</string>

    <string name="birthday">Дата народження</string>
    <string name="registration_user">Користувач</string>
    <string name="signup_title">Авторизацiя</string>
    <string name="singup_button">Увійти</string>
    <string name="title_activity_shelter">ShelterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_shelter_title">Створення притулку</string>
    <string name="shelter_name">Назва притулку</string>
    <string name="shelter_longitude">Довгота</string>
    <string name="shelter_latitude">Широта</string>
    <string name="shelter_url">Посилання на сайт</string>
    <string name="shelter_create">Створити</string>
    <string name="shelter_title">Дані про ваш притулок</string>
    <string name="shelter_change">Змінити</string>
    <string name="title_activity_shelter_maps">Map</string>
    <string name="title_activity_user_shelter">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pets">Тварини</string>
    <string name="shelter">О притулку</string>
    <string name="settings">Налаштування</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shelter_main_title">Притулок</string>
    <string name="pets_main_title">Тварини</string>
    <string-array name="species">
        <item>-</item>
        <item>Хлопчики</item>
        <item>Дівчинки</item>
        <item>Собака</item>
        <item>Кіт</item>
        <item>Стерилізований</item>
        <item>Не стерилізований</item>
    </string-array>
    <string-array name="sorting">
        <item>-</item>
        <item>За ім`ям</item>
        <item>За віком</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
</resources>