<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#F2D8C0"
    tools:context=".fragments.BottomBookedFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/ChooseDate"
        android:textSize="20dp"
        android:padding="10dp"
        android:fontFamily="@font/comfortaa"
   />


    <TextView
        android:id="@+id/dateTimePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/date"
        android:textSize="20dp"
        android:padding="10dp"
        android:fontFamily="@font/comfortaa"
        android:background="@drawable/input_shadow"
        android:ems="10"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/accept"
        android:backgroundTint="@color/purple_500"
  />

</LinearLayout>