<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2D8C0"
    tools:context=".EditProfileActivity">

    <View
        android:id="@+id/view"
        android:layout_width="358dp"
        android:layout_height="554dp"
        android:background="@drawable/background_div"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/change"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/purple_500"
        android:fontFamily="@font/comfortaa"
        android:text="@string/change"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/changePassword" />

    <EditText
        android:id="@+id/changePassword"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_shadow"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/registration_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        android:textSize="18dp"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/changeEmail" />

    <EditText
        android:id="@+id/changePhone"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_shadow"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/registration_phone"
        android:inputType="phone"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/changeSurname" />

    <EditText
        android:id="@+id/changeSurname"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_shadow"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/registration_surname"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/changeName" />

    <EditText
        android:id="@+id/changeName"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_shadow"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/registration_name"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <EditText
        android:id="@+id/changeEmail"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_shadow"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/registration_email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/changePhone" />

</androidx.constraintlayout.widget.ConstraintLayout>